force-app/main/default/objects/Medicament__c/Medicament__c.object-meta.xml
<CustomObject>
    <label>Medicament</label>
    <nameField>
        <label>Medicament Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medicaments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>