force-app/main/default/objects/Medicament__c/fields/Dose__c.field-meta.xml
<CustomField>
    <fullName>Dose__c</fullName>
    <label>Dose</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>