force-app/main/default/objects/Medicament__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>